@@ -273,7 +273,7 @@ if test "x$libspreadsheet" = x; then
   libspreadsheet=libspreadsheet-1.10
 fi
 
-PKG_CHECK_MODULES(gnumeric, [$libspreadsheet >= 1.9.6], [build_gnumeric_plugin=yes],
+PKG_CHECK_MODULES(gnumeric, [$libspreadsheet >= 1.9.10], [build_gnumeric_plugin=yes],
 		[build_gnumeric_plugin=no])
 dnl --without is not handled
 
